# RayTracer

./: .gitignore  Cargo.toml
cuda/: CMakeLists.txt  compile_flags.txt  gpu_render.cu
cuda/include/: aabb.cuh  bvh.cuh  camera.cuh  hittable.cuh  interval.cuh  manager.cuh  material.cuh  parser.cuh  pi.cuh  random.cuh  ray.cuh  texture.cuh  vec3.cuh
cuda/tests/: cuda_parser_smoke.cu
docs/: cuda_ir.md  ir_usage.md
images/gpu/scenario_1/: camera_scenario_1.cfg
images/phase_1/: blur.ppm  blur_large.ppm  final_trial.ppm  focus.ppm  focus_large.ppm  fuzz.ppm  fuzz_large.ppm  high.ppm  high_large.ppm  material.ppm  material_large.ppm  matte.ppm  refract.ppm  refract_large.ppm  smooth.ppm  sun.ppm
images/phase_2/: cornell_box.ppm  cornell_smoke.ppm  cuboids.ppm  movement.ppm  perlin_turb.ppm  perlin_turb_sin.ppm  quads.ppm  simple_light.ppm  simple_light_sphere.ppm  texture.ppm  translate_and_rotate.ppm  trial.ppm  trial3.ppm
ir/: main_scene.ir  scenario_1.ir  scenario_2.ir  scenario_3.ir  scenario_4.ir  scenario_5.ir  scenario_6.ir  scenario_7.ir  scenario_8.ir  scenario_9.ir
src/: aabb.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  export_ir.rs  export_scenarios.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  sphere.rs  texture.rs  triangle.rs  utils.rs  vec3.rs
tests/: aabb_test.rs  ir_pipeline_test.rs  triangle_test.rs
